kube/kubernetes.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: programming-languages
spec:
  selector:
    app: programming-languages
  ports:
    - name: listener
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: programming-languages
          image: emilienlgs/programming-languages:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: 200Mi
              cpu: "0.12"
            limits:
              memory: 300Mi
              cpu: "0.25"
          volumeMounts:
            - name: www-storage
              mountPath: /var/www/
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                  ]
        - name: nginx
          image: nginx:alpine
          resources:
            requests:
              memory: 200Mi
              cpu: "0.12"
            limits:
              memory: 300Mi
              cpu: "0.25"
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: www-storage
              mountPath: /var/www/
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: www-storage
          persistentVolumeClaim:
            claimName: pv-www-claim
        - name: nginx-config-volume
          configMap:
            name: nginx-config
