kube/programming-languages-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: programming-languages-database
spec:
  selector:
    app: programming-languages
  ports:
    - port: 3306
      targetPort: 3306
  
  type: NodePort
