kube/programming-languages-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: programming-languages
  name: programming-languages
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: programming-languages
  type: LoadBalancer
